# Kalbii

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
app/api/: main.py  schemas.py
app/core/: config.py  logging.py  security.py
app/crypto/: cipher.py
app/cv/: clip_zeroshot.py  opencv_anomaly.py  pipeline.py
app/cv/autoencoder/: model.py
app/db/: repositories.py
app/nlp/: pipeline.py  risk_lexicon.yml
app/risk/: model.py  train.py
app/workers/: celery_app.py  tasks.py
dashboard/: streamlit_app.py
docker/: api.Dockerfile  dashboard.Dockerfile  frontend.Dockerfile  nginx-frontend.conf  worker.Dockerfile
docs/: 00_EXECUTIVE_SUMMARY.md  01_ARCHITECTURE.md  02_ENCRYPTION_DESIGN.md  03_NLP_AND_CV_DESIGN.md  04_RISK_API_DEPLOY.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css
frontend/src/components/: ResultPanel.tsx
frontend/src/pages/: AnalyzePage.tsx  HistoryPage.tsx
tests/: conftest.py  test_api.py  test_cipher.py  test_cv.py  test_nlp.py  test_risk.py
